# glyphs-info-mcp

./: .env.example  .gitignore  .gitmodules  .mcp.json.template  CLAUDE.md  LICENSE  Makefile  README.md  README.zh-TW.md  conftest.py  index.html  pyproject.toml  script.js  style.css  zh-Hant.html
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
en/: index.html
src/glyphs_info_mcp/: __init__.py  __main__.py  config.py  modules_config.yaml  server.py  unified_tools.py
src/glyphs_info_mcp/data/: api_structure.json  class_hierarchy.py
src/glyphs_info_mcp/modules/glyphs_api/: __init__.py  plugins_tools.py  unified_api_module.py  vanilla_tools.py
src/glyphs_info_mcp/modules/glyphs_plugins/: .gitignore  __init__.py  glyphs_plugins_module.py
src/glyphs_info_mcp/modules/glyphs_sdk/: __init__.py  glyphs_sdk_module.py  sdk_formatter.py  sdk_indexer.py  sdk_searcher.py
src/glyphs_info_mcp/modules/light_table_api/: __init__.py  light_table_module.py
src/glyphs_info_mcp/modules/mekkablue_scripts/: mekkablue_scripts_module.py
src/glyphs_info_mcp/shared/core/: __init__.py  architecture_context.py  architecture_integration.py  base_module.py  config_loader.py  error_handling.py  glyphs_patterns.py  id_connection_guide.py  installation_helper.py  interfaces.py  mekkablue_scripts_accessor.py  module_config.py  module_loader.py  plugin_templates_resources.py  python_api_native_accessor.py  query_utils.py  (+11 more)
tests/: conftest.py  emoji_comparison_test.md  test_api_structure.py  test_class_hierarchy.py  test_config_loader.py  test_error_handling.py  test_mcp_resources_integration.py  test_module_config.py  test_module_filter.py  test_objc_naming_tools.py  test_pagination.py  test_protocol_parser.py  test_python_samples_resources.py  test_repository_fallback.py  test_repository_scanner.py  test_response_format.py  test_shared_core.py  test_unified_tools.py  test_vanilla_local_accessor.py  test_xcode_samples_resources.py  test_xcode_templates_resources.py
tests/test_glyphs_api/: __init__.py  test_api_fixes.py  test_python_api_layered_search.py  test_python_api_tiered_search.py
tests/test_glyphs_handbook/: __init__.py  test_extract_title.py  test_handbook_scraper.py  test_highlight_keyword.py  test_layered_search.py  test_section_parser.py  test_toc_parser.py
tests/test_glyphs_plugins/: __init__.py  test_file_classifier.py  test_glyphs_plugins_module.py  test_local_matcher.py  test_metadata_extractor.py  test_official_registry.py  test_plugins_accessor.py  test_plugins_enhanced.py  test_plugins_module.py  test_source_collector.py
tests/test_glyphs_sdk/: __init__.py  test_python_samples_tools.py  test_sdk_native_accessor_python_samples.py  test_sdk_resources.py
tests/test_glyphs_vocabulary/: __init__.py  test_base_nib_extractor.py  test_framework_vocabulary_accessor.py  test_plugins_vocabulary_accessor.py  test_ui_vocabulary_accessor.py  test_vocabulary_module_plugins_integration.py  test_vocabulary_module_tools.py
tests/test_shared_core/: test_query_utils.py  test_scoring_weights.py
zh-Hant/: index.html
(+353 files in other folders)
